--- a/02_nav_bar/index.html
+++ b/02_nav_bar/index.html
@@ -12,7 +12,7 @@
 <body>
   
   <script src="index.js" type="text/babel"></script>
-  <div class="container"></div>
+  <div class="root"></div>
 
 </body>
 </html>
